--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -2684,8 +2684,8 @@
 	}
 
 	body.landing #header {
-		/*background: transparent;*/
-		position: fixed;
+		background: transparent;
+		position: absolute;
 	}
 
 	body {
@@ -2834,10 +2834,10 @@
 		-webkit-backface-visibility: hidden;
 		-ms-backface-visibility: hidden;
 		backface-visibility: hidden;
-		-moz-transform: translateX(-275px);
-		-webkit-transform: translateX(-275px);
-		-ms-transform: translateX(-275px);
-		transform: translateX(-275px);
+		-moz-transform: translateX(-300px);
+		-webkit-transform: translateX(-300px);
+		-ms-transform: translateX(-300px);
+		transform: translateX(-300px);
 		-moz-transition: -moz-transform 0.5s ease;
 		-webkit-transition: -webkit-transform 0.5s ease;
 		-ms-transition: -ms-transform 0.5s ease;
@@ -2848,7 +2848,7 @@
 		overflow-y: auto;
 		position: fixed;
 		top: 0;
-		width: 275px;
+		width: 300px;
 		z-index: 10002;
 		background: #222;
     	box-shadow: inset -0.25em 0 0.5em rgba(0,0,0,0.4);
@@ -2904,17 +2904,17 @@
 			}
 
 	body.navPanel-visible #page-wrapper {
-		-moz-transform: translateX(275px);
-		-webkit-transform: translateX(275px);
-		-ms-transform: translateX(275px);
-		transform: translateX(275px);
+		-moz-transform: translateX(300px);
+		-webkit-transform: translateX(300px);
+		-ms-transform: translateX(300px);
+		transform: translateX(300px);
 	}
 
 	body.navPanel-visible #titleBar {
-		-moz-transform: translateX(275px);
-		-webkit-transform: translateX(275px);
-		-ms-transform: translateX(275px);
-		transform: translateX(275px);
+		-moz-transform: translateX(300px);
+		-webkit-transform: translateX(300px);
+		-ms-transform: translateX(300px);
+		transform: translateX(300px);
 	}
 
 	body.navPanel-visible #navPanel {
