--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -212,7 +212,7 @@
 
 .inner h2 {
 	color: #28bfad;
-	margin-top: -2em; 
+	margin-top: -4em; 
 	padding-top: 4em; 
 	/*display: inline-block;*/
 	clear: both;
@@ -259,12 +259,16 @@
 	}
 
 	.columns.project-intro {
-    justify-content: space-around;
+    	justify-content: space-around;
 	}
 
-	.columns-verticle {
-		flex-direction: column;
+	.columns img.lightbox-thumb:hover,
+	.columns img.lightbox-thumb:focus,
+	.columns img.lightbox-thumb:active {
+		cursor: pointer;
+		outline: 5px solid #28bfad;
 	}
+
 
 /* Captions */
 
