--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -34,7 +34,7 @@
 
 	body, input, select, textarea {
 		color: #585858;
-		font-family: "Source Sans Pro", Helvetica, sans-serif;
+		font-family: Raleway, sans-serif;
 		font-weight: 300;
 	}
 
@@ -50,12 +50,19 @@
 		margin: 0 0 2em 0;
 	}
 
-	h2, h3, h4, h5, h6 {
+	h2 {
 		font-weight: 900;
 		line-height: 1.5;
 		margin: 0 0 2em 0;
 		text-transform: uppercase;
-		letter-spacing: 0.35em;
+		letter-spacing: 0.1em;
+	}
+
+	h3, h4, h5, h6 {
+		font-weight: 900;
+		line-height: 1.5;
+		margin: 0 0 2em 0;
+		letter-spacing: 0.1em;
 	}
 
 		h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -64,22 +71,27 @@
 
 	h2 {
 		font-size: 1.7em;
+		color: #000000
 	}
 
 	h3 {
-		font-size: 1em;
+		font-size: 1.3em;
+		color: #444
 	}
 
 	h4 {
-		font-size: 0.8em;
+		font-size: 1em;
+		color: #777
 	}
 
 	h5 {
 		font-size: 0.8em;
+		color: #777
 	}
 
 	h6 {
-		font-size: 0.8em;
+		font-size: 0.6em;
+		color: #777
 	}
 
 	@media screen and (max-width: 980px) {
@@ -93,11 +105,15 @@
 	@media screen and (max-width: 736px) {
 
 		h2 {
-			font-size: 1em;
+			font-size: 1.5em;
 		}
 
 		h3 {
-			font-size: 0.8em;
+			font-size: 1.3em;
+		}
+
+		h4 {
+			font-size: 1em;
 		}
 
 	}
@@ -111,6 +127,7 @@
 		hr.major {
 			margin: 3em 0;
 		}
+
 
 /* Article Header */
 
@@ -212,7 +229,7 @@
 
 .inner h2 {
 	color: #28bfad;
-	margin-top: -4em; 
+	margin-top: -2em; 
 	padding-top: 4em; 
 	/*display: inline-block;*/
 	clear: both;
@@ -252,6 +269,10 @@
 		flex-wrap: nowrap;
 	}
 
+	.columns-vertical {
+		flex-direction: column;
+	}
+
 	@media screen and (max-width: 736px) {
 		.columns {
 			flex-direction: column;
@@ -273,7 +294,7 @@
 /* Captions */
 
 	.caption {
-		flex-basis: 40%;
+		flex-basis: 30%;
 	}
 
 	.caption-title {
@@ -296,19 +317,22 @@
 
 	.content-box {
 		padding: 2em;
-		font-size: 1.3em;
+		font-size: 1.1em;
 		color: #fff;
 		flex-grow: 1;
 	}
 
 	.content-box:nth-child(1) {
-		background-image: url('../../images/pic04.jpg');
+		background-color: #50858B
+		/*background-image: url('../../images/con2.jpg');*/
 	}
 	.content-box:nth-child(2) {
-		background-image: url('../../images/pic05.jpg');
+		background-color: #697F7F
+		/*background-image: url('../../images/con4.jpg');*/
 	}
 	.content-box:nth-child(3) {
-		background-image: url('../../images/pic02.jpg');
+		background-color: #50858B
+		/*background-image: url('../../images/con5.jpg');*/
 	}
 
 /* Icon */
@@ -491,25 +515,25 @@
 /* Content */
 
 	p .q-entertain {
-		color: #39c088;
+		color: #F5A623;
 	}
 	p .q-annoy {
-		color: #e44c65;
+		color: #05A8AA;
 	}
 	p .q-info {
-		color: #5480f1;
+		color: #BD2D87;
 	}
 
 	ol .q-entertain {
-		box-shadow: -5px 0 4px -3px #39c088;
+		box-shadow: -2px 0 0px 0px #F5A623;
 	}
 
 	ol .q-annoy {
-		box-shadow: -5px 0 4px -3px #e44c65;
+		box-shadow: -2px 0 0px 0px #05A8AA;
 	}
 
 	ol .q-info {
-		box-shadow: -5px 0 4px -3px #5480f1;
+		box-shadow: -2px 0 0px 0px #BD2D87;
 	}
 
 /* Wrapper */
@@ -529,9 +553,8 @@
 
 		}
 /*video*/
-	video {
+	iframe {
     max-width: 100%;
-    height: auto;
 	}
 
 
