complete project list

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -185,7 +185,7 @@
 	text-align: center;
     color: #fff;
     box-shadow: 0 2px 4px rgba( 34,34,34, 0.3);
-    z-index: 99999;
+    z-index: 10002;
 }
 
 .project-nav li {
@@ -216,10 +216,9 @@
 		width: 13em;
 		padding: 1em;
 		background: #222;
-		z-index: 1000;
-		border-bottom-left-radius: 2em;
-		border-bottom-right-radius: 2em;
-		border-top-left-radius: 2em;
+		z-index: 10001;
+		border-bottom-left-radius: 10px;
+		border-bottom-right-radius: 10px;
 		box-shadow: 0 2px 4px rgba( 34,34,34, 0.3);
 	}
 }
@@ -283,13 +282,6 @@
     	justify-content: space-around;
 	}
 
-	.columns img.lightbox-thumb:hover,
-	.columns img.lightbox-thumb:focus,
-	.columns img.lightbox-thumb:active {
-		cursor: pointer;
-		outline: 5px solid #28bfad;
-	}
-
 
 /* Captions */
 
@@ -311,6 +303,164 @@
 		.caption img {
 			max-width: 100%;
 		}
+	}
+
+/* Carousel */
+	.carousel {
+		position: relative;
+		max-width: 100%;
+		min-height: 20em;
+		max-height: 100vh;
+	}
+
+	.carousel-prev,
+	.carousel-next {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		width: 15%;
+		background-color: rgba( 34,34,34, 0);
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: 25%;
+		border: none;
+		opacity: 0.3;
+		z-index: 10;
+		transition-property: all;
+		transition-duration: 500ms;
+	}
+
+	.carousel-prev:hover,
+	.carousel-next:hover {
+		cursor: pointer;
+		background-color: rgba( 34,34,34, 0.3);
+		opacity: 1;
+	}
+
+	.carousel-prev {
+		left: 0;
+		background-image: url('images/left-arrow.png');
+	}
+
+	.carousel-next {
+		right: 0;
+		background-image: url('images/right-arrow.png');
+	}
+
+	.carousel-container {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		overflow: hidden;
+		text-align: center;
+	}
+
+	.carousel-slide {
+		display: none;
+		opacity: 0;
+		transition-property: opacity;
+		transition-duration: 500ms;
+	}
+
+	.carousel-slide-active {
+		display: block;
+		opacity: 1;
+	}
+
+	.carousel-slide img,
+	.carousel-slide iframe {
+		max-width: 100%;
+	}
+
+/* Lightbox */
+
+	#lightbox {
+		display: none;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		text-align: center;
+		z-index: 99999;
+	}
+
+	#lightbox:before {
+		content: '';
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background: rgba(0,0,0,0.8);
+		z-index: -1;
+	}
+
+	.lightbox-controls {
+		position: fixed;
+		left: 0;
+		right: 0;
+		height: 4em;
+		background: rgba(0,0,0,0.7);
+	}
+
+	.lightbox-close {
+		position: absolute;
+		right: 2em;
+		top: 1.25em;
+		width: 3em;
+		height: 3em;
+		background-image: url('images/closeX.svg');
+		background-size: contain;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-color: transparent;
+		border: none;
+	}
+
+	.lightbox-next,
+	.lightbox-prev {
+		position: relative;
+		top: 1.25em;
+		width: 3em;
+		height: 3em;
+		background-color: transparent;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: contain;
+		border: none;
+	}
+
+	.lightbox-prev {
+		right: 2em;
+		background-image: url('images/left-arrow.png');
+	}
+
+	.lightbox-next {
+		left: 2em;
+		background-image: url('images/right-arrow.png');
+	}
+
+	.lightbox-close:hover,
+	.lightbox-close:focus,
+	.lightbox-next:hover,
+	.lightbox-next:focus,
+	.lightbox-prev:hover,
+	.lightbox-prev:focus {
+		cursor: pointer;
+	}
+
+	#lightbox .lightbox-content {
+		display: block;
+		margin: 4em 3em;
+	}
+
+	.lightbox-active-element {
+		box-shadow: 0 1em 2em rgba(0,0,0,0.7);
+	}
+
+	.thumbnail:hover,
+	.thumbnail:focus {
+		cursor: zoom-in;
 	}
 
 /* Content Box */
