--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -2637,10 +2637,19 @@
 
 	#header nav ul li {
 		display: inline-block;
+		position: relative;
 		margin-left: 1em;
 	}
 
-	#header nav ul li a, #header nav ul li span {
+	#header nav > ul > li:first-child {
+		width: 8em;
+		background-image: url(images/arrow.svg);
+		background-repeat: no-repeat;
+		background-position: 70%;
+	}
+
+	#header nav ul li a, 
+	#header nav ul li span {
 		border: 0;
 		color: inherit;
 		display: inline-block;
@@ -2649,22 +2658,51 @@
 		outline: 0;
 	}
 
-	#header nav ul li a.button, #header nav ul li span.button {
+	#header nav ul li a.button, 
+	#header nav ul li span.button {
 		height: 2em;
 		line-height: 2em;
 		padding: 0 1.25em;
 	}
 
-	#header nav ul li a:not(.button):before, #header nav ul li span:not(.button):before {
+	#header nav ul li a:not(.button):before, 
+	#header nav ul li span:not(.button):before {
 		margin-right: 0.5em;
 	}
 
-	#header nav ul li.active > a, #header nav ul li.active > span {
+	#header nav ul li.active > a, 
+	#header nav ul li.active > span {
 		color: #28bfad;
 	}
 
 	#header nav ul li > ul {
 		display: none;
+		position: absolute;
+		left: -1em;
+		width: 20em;
+		padding-left: 0;
+		background: rgba(34,34,34, 0.8);
+		border-bottom-left-radius: 10px;
+		border-bottom-right-radius: 10px;
+	}
+
+	#header nav ul li:hover > ul,
+	#header nav ul li:focus > ul,
+	#header nav ul li:active > ul {
+		display: block;
+	}
+
+	#header nav ul li > ul li {
+		margin: 0;
+		padding: 0;
+		display: block;
+	}
+
+	#header nav ul li > ul a {
+		display: block;
+		padding: 0 1.5em;
+		height: 2.5em;
+		line-height: 2.5;
 	}
 
 	#header .symbol,
@@ -2834,10 +2872,10 @@
 		-webkit-backface-visibility: hidden;
 		-ms-backface-visibility: hidden;
 		backface-visibility: hidden;
-		-moz-transform: translateX(-300px);
-		-webkit-transform: translateX(-300px);
-		-ms-transform: translateX(-300px);
-		transform: translateX(-300px);
+		-moz-transform: translateX(-325px);
+		-webkit-transform: translateX(-325px);
+		-ms-transform: translateX(-325px);
+		transform: translateX(-325px);
 		-moz-transition: -moz-transform 0.5s ease;
 		-webkit-transition: -webkit-transform 0.5s ease;
 		-ms-transition: -ms-transform 0.5s ease;
@@ -2848,7 +2886,7 @@
 		overflow-y: auto;
 		position: fixed;
 		top: 0;
-		width: 300px;
+		width: 325px;
 		z-index: 10002;
 		background: #222;
     	box-shadow: inset -0.25em 0 0.5em rgba(0,0,0,0.4);
@@ -2904,17 +2942,17 @@
 			}
 
 	body.navPanel-visible #page-wrapper {
-		-moz-transform: translateX(300px);
-		-webkit-transform: translateX(300px);
-		-ms-transform: translateX(300px);
-		transform: translateX(300px);
+		-moz-transform: translateX(325px);
+		-webkit-transform: translateX(325px);
+		-ms-transform: translateX(325px);
+		transform: translateX(325px);
 	}
 
 	body.navPanel-visible #titleBar {
-		-moz-transform: translateX(300px);
-		-webkit-transform: translateX(300px);
-		-ms-transform: translateX(300px);
-		transform: translateX(300px);
+		-moz-transform: translateX(325px);
+		-webkit-transform: translateX(325px);
+		-ms-transform: translateX(325px);
+		transform: translateX(325px);
 	}
 
 	body.navPanel-visible #navPanel {
